--- a/package.json
+++ b/package.json
@@ -9,15 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "expo": "~51.0.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.1",
+    "react-native-paper": "^5.12.3",
+    "react-native-svg": "15.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tsconfig/react-native": "^3.0.5",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react-test-renderer": "^18.3.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
