--- a/package.json
+++ b/package.json
@@ -16,17 +16,18 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.6",
+    "expo-font": "~12.0.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10",
-    "expo-font": "~12.0.5"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
